# vnag

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/source/: changelog.md  index.md
docs/source/advanced/: thinking.md
docs/source/api/: index.rst
docs/source/cli/: index.md
docs/source/components/: agent.md  gateway.md  index.md  skill.md  tool.md
docs/source/configuration/: index.md
docs/source/getting_started/: key_concepts.md  quickstart.md
docs/source/rag/: index.md  vector.md
docs/source/tutorial/: cli.md  first_agent.md  index.md  local_tool.md  mcp_tool.md  profile.md  rag.md
examples/: README.md
examples/agent/: run_agent_tool.py  run_task_agent.py
examples/gateway/: README.md  run_completion_gateway.py
examples/rag/: run_ctp_rag.py
examples/ui/: README.md  run_chat_ui.py
examples/vector/: run_chromadb_demo.py  run_duckdb_demo.py
tests/: test_compaction.py  test_file_tools.py  test_interaction.py  test_local.py
vnag/: __init__.py  __main__.py  agent.py  constant.py  embedder.py  engine.py  interaction.py  local.py  object.py  skill.py  tracer.py  vector.py
vnag/cli/: __init__.py  __main__.py  app.py  ask.py  bridge.py  commands.py  completer.py  factory.py  renderer.py
vnag/embedders/: __init__.py  dashscope_embedder.py  openai_embedder.py  sentence_embedder.py
vnag/gateways/: __init__.py  anthropic_gateway.py  bailian_gateway.py  bedrock_gateway.py  completion_gateway.py  deepseek_gateway.py  gemini_gateway.py  litellm_gateway.py  minimax_gateway.py  moonshot_gateway.py  ollama_gateway.py  openai_gateway.py  openrouter_gateway.py  volcengine_gateway.py  zhipu_gateway.py
vnag/tools/: file_tools.py  interaction_tools.py  search_tools.py  terminal_tools.py  todo_tools.py
vnag/ui/: knowledge.py  widget.py  window.py  worker.py
vnag/ui/resources/: chat.html  style.css
vnag/ui/tools/: __init__.py  knowledge_tools.py
vnag/vectors/: chromadb_vector.py  duckdb_vector.py  qdrant_vector.py
