[project]
name = "vnag"
dynamic = ["version"]
description = "VeighNa agent framework."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Xiaoyou Chen", email = "xiaoyou.chen@mail.vnpy.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    # 核心框架
    "pydantic",
    "loguru",
    # AI服务
    "openai",
    "anthropic",
    "ollama",
    "dashscope",
    "boto3",
    "google-genai",
    # UI界面
    "PySide6",
    "PySide6-Addons",
    "QDarkStyle",
    # 工具调用
    "fastmcp",
    "requests",
    "chardet",
    # 技能系统
    "pyyaml",
]
requires-python = ">=3.10"
keywords = ["ai", "agent"]

[project.optional-dependencies]
tui = [
    "prompt_toolkit",
    "rich",
]
rag = [
    # 分段器
    "markdown-it-py",
    "libclang",
    # 嵌入模型
    "sentence-transformers",
    # 向量数据库
    "chromadb",
    "qdrant-client",
    "numpy",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "vnag/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["vnag"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["vnag*"] 

[tool.ruff]
target-version = "py310"
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true 
